Fixed audio quality

--- a/MVVM/View/tokens.xaml
+++ b/MVVM/View/tokens.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:TempoWithGUI.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel>
+        
+    </StackPanel>
 </UserControl>
