--- a/Theme/TextBoxTheme.xaml
+++ b/Theme/TextBoxTheme.xaml
@@ -30,7 +30,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" Background="PaleVioletRed">
+                    <Border CornerRadius="10" Background="#49464d">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1" Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}" Background="Transparent" VerticalContentAlignment="Center" Foreground="#CECECF" x:Name="UsernameIn" Padding="5" BorderThickness="0"/>
@@ -56,7 +56,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" Background="PaleVioletRed">
+                    <Border CornerRadius="10" Background="#49464d">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1" Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}" Background="Transparent" VerticalContentAlignment="Center" Foreground="#CECECF" x:Name="PasswordIn" Padding="5" BorderThickness="0"/>
@@ -82,7 +82,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" Background="PaleVioletRed">
+                    <Border CornerRadius="10" Background="#49464d">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1" Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}" Background="Transparent" VerticalContentAlignment="Center" Foreground="#CECECF" Padding="5,0,0,3" BorderThickness="0"/>
@@ -96,7 +96,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" Background="PaleVioletRed">
+                    <Border CornerRadius="10" Background="#49464d">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1" Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}" Background="Transparent" VerticalContentAlignment="Top" Foreground="#CECECF" x:Name="SearchBox" Padding="5" BorderThickness="0"
