--- a/MVVM/View/Proxies.xaml
+++ b/MVVM/View/Proxies.xaml
@@ -5,8 +5,60 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TempoWithGUI.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="710">
+    <UserControl.Resources>
+        <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
+            <Style.Setters>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{TemplateBinding Background}">
+                                <TextBlock Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" FontFamily="/Fonts/#Poppins"
+                                       HorizontalAlignment="Center" Foreground="AntiqueWhite"
+                                           Padding="10"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Background" Value="Transparent"/>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#141114"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="530"/>
+            <ColumnDefinition Width="190"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Vertical" Margin="10, 0" Grid.Column="0">
+            <TextBlock Text="Proxies" Margin="10, 0, 0, 0" FontSize="36" Foreground="AntiqueWhite" Grid.Column="0" x:Name="AdminsLabel"/>
+            <Border BorderThickness="0" CornerRadius="20" Background="#19161A"
+                Height="5" Width="500" Margin="0, 10" HorizontalAlignment="Left"/>
+            <TextBox Style="{DynamicResource ModernTextBoxMultiLine}" Grid.Column="0" HorizontalAlignment="Left" Padding="15"
+                         Height="300" Width="500" Margin="0,0,0,0" x:Name="ProxiesIn"/>
+            <StackPanel Orientation="Horizontal" Margin="0,15">
+                <RadioButton Content="Paid" Height="50" Foreground="White" x:Name="paidRadio"
+                             FontSize="14" Style="{StaticResource BotButtonTheme}"
+                             Margin="100,0,30,0" Width="100" Command="{Binding }" Checked="PaidRadio_Click"/>
+                <RadioButton Content="Free" Height="50" Foreground="White" Margin="30,0" x:Name="freeRadio"
+                             FontSize="14" Style="{StaticResource BotButtonTheme}"
+                             Width="100" Checked="FreeRadio_click"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Grid.Column="1" Height="450" Margin="30">
+            <Button Content="BUY" Padding="20" Margin="0, 20"
+                    FontSize="15" Click="BuyBtn_Click"/>
+            <Button Content="Save" Padding="20" Margin="0,20"
+                    FontSize="15" Click="Save_Click"/>
+            <Button Content="Reset" Padding="20" Margin="0,20"
+                    FontSize="15" Click="Reset_Click"/>
+            <Button Content="Open File" Padding="20" Margin="0,20"
+                    FontSize="15" Click="OpenFile_Click"/>
+        </StackPanel>
     </Grid>
 </UserControl>
