--- a/MVVM/View/RaidView/JoinGuild.xaml
+++ b/MVVM/View/RaidView/JoinGuild.xaml
@@ -63,11 +63,14 @@
                 <ColumnDefinition Width="240">
                 </ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 40"
+            <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 20"
                         HorizontalAlignment="Center">
                 <TextBlock Text="Invite link / code" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
                 <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
                          Height="25" Width="300" Margin="0,0,0,0" x:Name="InviteIn"/>
+                <TextBlock Text="Guild ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
+                <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
+                         Height="25" Width="300" Margin="0,0,0,0" x:Name="GuildIn"/>
                 <CheckBox Content="Bypass reaction verification" Height="20"
                           Margin="0,10" x:Name="ReactionCB"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
