--- a/MVVM/View/MassDM.xaml
+++ b/MVVM/View/MassDM.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TempoWithGUI.MVVM.View.CallRaid"
+﻿<Window x:Class="TempoWithGUI.MVVM.View.MassDM"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TempoWithGUI.MVVM.View"
         mc:Ignorable="d"
-        Title="Call Spam" Height="450" Width="650"
+        Title="Mass DM" Height="450" Width="650"
         WindowStyle="None"
         ResizeMode="NoResize"
         Background="Transparent"
@@ -44,10 +44,10 @@
                 </Grid.ColumnDefinitions>
                 <Grid >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="210"/>
-                        <ColumnDefinition Width="0"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Spam Call" FontSize="36" FontFamily="Fonts/#Poppins"
+                    <TextBlock Text="Mass DM" FontSize="36" FontFamily="Fonts/#Poppins"
                        VerticalAlignment="Center" Margin="30, 0, 0, -10"
                        Foreground="AntiqueWhite"/>
                     <Canvas Grid.Column="1" HorizontalAlignment="Left"
@@ -75,11 +75,14 @@
                     <ColumnDefinition Width="240">
                     </ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 60"
+                <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 50"
                         HorizontalAlignment="Center">
-                    <TextBlock Text="User ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
+                    <TextBlock Text="Guild ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
                     <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
-                         Height="25" Width="300" Margin="0,0,0,0" x:Name="UserIn"/>
+                         Height="25" Width="300" Margin="0,0,0,0" x:Name="GuildIn"/>
+                    <TextBlock Text="Channel ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
+                    <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
+                         Height="25" Width="300" Margin="0,0,0,0" x:Name="ChannelIn"/>
                     <CheckBox Content="Send embed" Height="20"
                           Margin="0,10" x:Name="EmbedCB"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
@@ -105,12 +108,15 @@
                     </Grid>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Grid.Column="1" Margin="30">
-                    <Button Content="Start" Padding="20" Margin="0,9"
-                    FontSize="15" Visibility="Hidden"/>
                     <Button Content="Start" Padding="20" Margin="0,20" x:Name="StartBtn"
                     FontSize="15" Click="Start_Click"/>
                     <Button Content="Stop" Padding="20" Margin="0,20" x:Name="StopBtn"
                     FontSize="15" Click="Stop_Click"/>
+                    <TextBlock Text="Message" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2"/>
+                    <TextBox Style="{DynamicResource ModernTextBoxMultiLine}" Grid.Column="2" HorizontalAlignment="Center" Padding="5,0,0,0" VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
+                         VerticalAlignment="Top"
+                         Height="100" Width="180" Margin="0,0,0,0" x:Name="MessageIn"
+                         FontSize="12"/>
                 </StackPanel>
             </Grid>
 
