Fixed music bot lag

--- a/MVVM/View/MassDM.xaml
+++ b/MVVM/View/MassDM.xaml
@@ -88,8 +88,8 @@
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins"/>
-                    <CheckBox Content="Delete after sending" Height="20"
-                          Margin="0,10" x:Name="DeleteCB"
+                    <CheckBox Content="Use proxies" Height="20"
+                          Margin="0,10" x:Name="ProxyCB" IsChecked="True"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins"/>
