--- a/MVVM/View/FriendRaid.xaml
+++ b/MVVM/View/FriendRaid.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TempoWithGUI.MVVM.View.VoiceRaid"
+﻿<Window x:Class="TempoWithGUI.MVVM.View.FriendRaid"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TempoWithGUI.MVVM.View"
         mc:Ignorable="d"
-        Title="Voice Raid" Height="450" Width="650"
+        Title="Friend Spam" Height="450" Width="650"
         WindowStyle="None"
         ResizeMode="NoResize"
         Background="Transparent"
@@ -44,10 +44,10 @@
                 </Grid.ColumnDefinitions>
                 <Grid >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="220"/>
-                        <ColumnDefinition Width="180"/>
+                        <ColumnDefinition Width="240"/>
+                        <ColumnDefinition Width="0"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Voice Chat" FontSize="36" FontFamily="Fonts/#Poppins"
+                    <TextBlock Text="Spam Friend" FontSize="36" FontFamily="Fonts/#Poppins"
                        VerticalAlignment="Center" Margin="30, 0, 0, -10"
                        Foreground="AntiqueWhite"/>
                     <Canvas Grid.Column="1" HorizontalAlignment="Left"
@@ -75,21 +75,18 @@
                     <ColumnDefinition Width="240">
                     </ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 20"
+                <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 60"
                         HorizontalAlignment="Center">
-                    <TextBlock Text="Guild ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
+                    <TextBlock Text="User ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
                     <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
-                         Height="25" Width="300" Margin="0,0,0,0" x:Name="GuildIn"/>
-                    <TextBlock Text="Channel ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
-                    <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
-                         Height="25" Width="300" Margin="0,0,0,0" x:Name="ChannelIn"/>
-                    <CheckBox Content="Play music" Height="20"
-                          Margin="0,20" x:Name="playCB" 
+                         Height="25" Width="300" Margin="0,0,0,0" x:Name="UserIn"/>
+                    <CheckBox Content="Single spam (sends only 1 request per account)" Height="20"
+                          Margin="0,10" x:Name="SingleCB"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
-                          FontSize="12" FontFamily="/Fonts/#Poppins" Click="playCB_Click"/>
-                    <CheckBox Content="Spam join" Height="20"
-                          Margin="0,10" x:Name="SpamCB" IsEnabled="False" Visibility="Collapsed"
+                          FontSize="12" FontFamily="/Fonts/#Poppins"/>
+                    <CheckBox Content="Delete after sending" Height="20"
+                          Margin="0,10" x:Name="DeleteCB"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins"/>
@@ -106,16 +103,13 @@
                         <TextBox Style="{DynamicResource ModernTextBoxOther}" Grid.Column="2" HorizontalAlignment="Left" Padding="5,0,0,0"
                          Height="25" Width="150" Margin="0,0,0,0" x:Name="TokensIn"/>
                     </Grid>
-                    <TextBlock Text="File" Margin="10,-10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2" x:Name="FileLabel"/>
-                    <TextBox Style="{DynamicResource ModernTextBoxOther}" Grid.Column="2" HorizontalAlignment="Left" Padding="5,0,0,0"
-                         Height="25" Width="150" Margin="0,0,0,0" x:Name="FileIn"/>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Grid.Column="1" Margin="30">
-                    <Button Content="Start" Padding="20"
-                    FontSize="15" Click="Start_Click" IsEnabled="False" Visibility="Hidden"/>
+                    <Button Content="Start" Padding="20" Margin="0,9"
+                    FontSize="15" Visibility="Hidden"/>
                     <Button Content="Start" Padding="20" Margin="0,20" x:Name="StartBtn"
                     FontSize="15" Click="Start_Click"/>
-                    <Button Content="Stop" Padding="20" Margin="0,20,0,22" x:Name="StopBtn"
+                    <Button Content="Stop" Padding="20" Margin="0,20" x:Name="StopBtn"
                     FontSize="15" Click="Stop_Click"/>
                 </StackPanel>
             </Grid>
